# simple-gl-template

./: .gitignore  CMakeLists.txt  README.md
include/: gl_2_1.h
src/: gl_2_1.c  main.cpp
